@@ -1,5 +1,5 @@
 `permat.control` <-
-function(ptype="full", mtype="count", method="quasiswap", fixedmar="both", shuffle="ind", strata=NULL, burnin=10000, thin=1000)
+function(ptype="full", mtype="count", method="quasiswap", fixedmar="both", shuffle="both", strata=NULL, burnin=10000, thin=1000)
 {
 list(ptype=ptype, mtype=mtype, method=method, fixedmar=fixedmar, shuffle=shuffle, strata=strata, burnin=burnin, thin=thin)
 }
